# dev-tools

./: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  git.rs  lib.rs  main copy.rs  main.rs  node.rs  utils.rs
src/assets/styles/: base.scss  main.scss
src/assets/styles/theme/: blue.module.scss  green.module.scss  purple.module.scss  red.module.scss  variables.scss
src/components/: SvgIcon.vue  Tag.vue
src/config/: index.ts
src/hooks/: loading.ts
src/pages/git/: index.vue
src/pages/home/: index.vue
src/pages/node/: index.vue
src/pages/node/components/: changeNode.vue  installFnmDIalog.vue  installVersions.vue  isInstall.vue  notInstall.vue  toInstall.vue
src/pages/setting/: index.vue
src/pages/welcome/: index.vue
src/stores/: index.ts
src/stores/modules/: app.ts  git.ts  node.ts  theme.ts
