[package]
name = "dev-tools"
version = "0.0.0"
description = "A Tauri App"
authors = ["wangxiaoze <wangxiaoze@petalmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dev_tools_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8.34"
log = "0.4"
env_logger = "0.8"
open = "5.3.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
